--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Poppins:wght@400;500;700&family=Rubik:wght@400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" charset="UTF-8"
+  <!-- <link rel="stylesheet" type="text/css" charset="UTF-8"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" /> -->
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
